# avs-client-python

./: .flake8  .gitattributes  .gitignore  Jenkinsfile  README.md  k.py  pyproject.toml  requirements.txt
.github/workflows/: extensive_vector_search_tests.yml  integration_test.yml  reusable-steps.yml  test.yml  unit_test.yml
docs/: admin.rst  aio.rst  aio_admin.rst  aio_client.rst  aio_index_object.rst  client.rst  conf.py  index.rst  index_object.rst  requirements.txt  sync.rst  types.rst  vectodb_client.rst  vectordb_admin.rst  vectordb_client.rst
proto/: auth.proto  codegen.sh  index.proto  transact.proto  types.proto  vector-db.proto
src/aerospike_vector/: __init__.py  admin.py  auth_pb2.py  auth_pb2_grpc.py  client.py  conversions.py  index_pb2.py  index_pb2_grpc.py  transact_pb2.py  transact_pb2_grpc.py  types.py  types_pb2.py  vector_db_pb2.py  vector_db_pb2_grpc.py  vectordb_admin.py  vectordb_channel_provider.py  vectordb_client.py
src/aerospike_vector/aio/: admin.py  client.py
src/aerospike_vector/internal/: channel_provider.py
src/aerospike_vector/private/: auth_pb2_grpc.py  conversions.py  index_pb2_grpc.py  types_pb2.py
src/aerospike_vector/shared/: admin_helpers.py  (+4 more)
src/aerospike_vector_search/: __init__.py  admin.py  client.py  index.py  types.py
templates/: service.config.json.template
tests/: aerospike-proximus.yml  aerospike-vector-search.yml  aerospike.conf  conftest.py  features.conf  gen.sh  pytest.ini  requirements.txt  setup.py  test_admin_client.py  test_admin_client_index_create.py  test_admin_client_index_drop.py  test_admin_client_index_get.py  test_admin_client_index_get_status.py  test_admin_client_index_list.py  test_example.py  test_vector_client.py  test_vector_client_exists.py  test_vector_get_put_exists.py  test_vector_search.py  utils.py
tests/aio/: conftest.py  test_admin_client_index_create.py  test_admin_client_index_drop.py  test_admin_client_index_get.py  test_admin_client_index_get_status.py  test_admin_client_index_list.py  test_service_config.py  test_vector_client_delete.py  test_vector_client_exists.py  test_vector_client_get.py  test_vector_client_insert.py  test_vector_client_put.py  test_vector_client_update.py  test_vector_client_upsert.py  test_vector_search.py
tests/assets/: aerospike-proximus.yml  aerospike-vector-search.yml  aerospike.conf  call_gen.sh  call_gen_mtls.sh  call_gen_normal.sh  call_gen_tls.sh  call_gen_tls_auth.sh  security_stanza.txt  service_stanza.txt  template.cnf  tls_stanza.txt
tests/rbac/: conftest.py
tests/service_configs/: backoff_multiplier.json  client_timeout.json  index_create_timeout.json  initial_backoff.json  master.json  max_backoff.json  max_backoff_lower_than_initial.json  retries.json  retryable_status_codes.json  transact_timeout.json
tests/standard/: conftest.py  test_admin_client_index_create.py  test_admin_client_index_drop.py  test_admin_client_index_get.py  test_admin_client_index_get_status.py  test_admin_client_index_list.py  test_admin_client_index_update.py  test_client_close.py  test_client_indexes_in_sync.py  test_extensive_vector_search.py  test_index.py  test_service_config.py  test_standalone_index.py  test_vector_client_delete.py  test_vector_client_exists.py  test_vector_client_index_get_percent_unmerged.py  test_vector_client_is_indexed.py  test_vector_client_search_by_key.py  test_vector_client_update.py  test_vector_client_upsert.py  test_vector_search.py
tests/sync/: conftest.py  requirements.txt  test_admin_client_index_create.py  test_admin_client_index_drop.py  test_admin_client_index_get.py  test_admin_client_index_get_status.py  test_admin_client_index_list.py  test_service_config.py  test_vector_client_delete.py  test_vector_client_exists.py  test_vector_client_get.py  test_vector_client_insert.py  test_vector_client_put.py  test_vector_client_update.py  test_vector_client_upsert.py  test_vector_search.py
tests/tls/: brawn.crt  brawn.csr  brawn.key  brawn.key.encrypted.pem  brawn.key.pem  brawn.keystore.jks  brawn.p12  child.crt  child.csr  child.key  child.key.encrypted.pem  child.key.pem  child.keystore.jks  child.p12  root.cert.pem  root.crt  root.key  root.key.pem  root.srl  root.truststore.jks
tests/unit/: test_grpc_channel_creation.py  test_grpc_channel_creation_async.py  test_index.py  test_index_async.py  test_service_config.py  test_service_config_async.py  test_token_manager.py
(+89 files in other folders)
