[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerospike-vector-search"
description = "Aerospike Vector Search Client Library for Python"
authors = [
    { name = "Aerospike, Inc.", email = "info@aerospike.com" }
]
readme = "README.md"
license = { text = "Apache Software License" }
keywords = ["aerospike", "vector", "database", "ANN"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database"
]
version = "4.1.1"
requires-python = ">3.8"
dependencies = [
    "grpcio == 1.71.0",
    "protobuf == 5.29.3",
    "pyjwt == 2.9.0",
    "numpy",
    "sphinx_rtd_theme"
]

[project.urls]
"Homepage" = "https://aerospike.com"

[tool.setuptools]
zip-safe = false
include-package-data = true
packages = ["aerospike_vector_search", "aerospike_vector_search.aio", "aerospike_vector_search.shared", "aerospike_vector_search.shared.proto_generated", "aerospike_vector_search.internal", "aerospike_vector_search.aio.internal"]
package-dir={"" = "src"}

[tool.black]
include = 'src'
exclude = '''
/(
    src/aerospike_vector_search/shared/proto_generated/*
  | src/aerospike_vector_search/aio/internal/__pycache__/*
  | src/aerospike_vector_search/aio/__pycache__/*
  | src/aerospike_vector_search/internal/__pycache__/*
  | src/aerospike_vector_search/shared/__pycache__/*
  | src/aerospike_vector_search/shared/proto_generated/__pycache__/*
  | src/aerospike_vector_search/__pycache__/*
  | src/aerospike_vector_search.egg-info/*
)/
'''
